# vgc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT  README.md  appveyor.yml  cppstyleguide.md  example.txt  pythonwrappersguide.md  vcpkg.json
libs/vgc/core/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithms.cpp  algorithms.h  animtime.cpp  animtime.h  api.h  arithmetic.cpp  arithmetic.h  array.h  assert.h  boolguard.cpp  boolguard.h  charutil.cpp  charutil.h  color.cpp  color.h  colors.h  compiler.h  datetime.cpp  datetime.h  defs.h  dll.h  doublearray.cpp  doublearray.h  enum.cpp  enum.h  epsilon.h  exception.cpp  exception.h  exceptions.cpp  exceptions.h  export.h  flags.h  float2int.h  floatarray.h  format.cpp  format.h  history.cpp  (+74 more)
libs/vgc/core/detail/: containerutil.h  parsebits.h  signal.cpp  signal.h
libs/vgc/core/internal/: containerutil.h  signal.cpp  signal.h  templateutil.h
libs/vgc/core/tests/: CMakeLists.txt  test_arithmetic.cpp  test_arithmetic.py  test_array.cpp  test_arrays.py  test_color.py  test_datetime.cpp  test_doublearray.py  test_enum.cpp  test_flags.cpp  test_format.cpp  test_format.py  test_int.cpp  test_io.py  test_limits.py  test_mat.py  test_object.cpp  test_object.py  test_parse.cpp  test_parse.py  test_paths.py  test_preprocessor.cpp  test_ranges.cpp  test_signal.cpp  test_signal.py  test_span.cpp  test_stringid.py  test_stringutil.cpp  test_stringutil.py  test_typeid.cpp  test_vec2.py  test_vec2d.py  test_vec2darray.py  test_xml.py  test_zero.cpp
libs/vgc/core/tools/: mat3.cpp  mat3.h  mat3.py  mat4.cpp  mat4.h  mat4.py  vec2.cpp  vec2.h  vec2.py  vgccore.natvis
libs/vgc/core/wraps/: CMakeLists.txt  array.h  class.h  common.h  exceptions.h  module.cpp  object.h  sharedconst.h  signal.h  wrap_arithmetic.cpp  wrap_arrays.cpp  wrap_charutil.cpp  wrap_color.cpp  wrap_doublearray.cpp  wrap_exceptions.cpp  wrap_format.cpp  wrap_io.cpp  wrap_limits.cpp  wrap_mat.cpp  wrap_object.cpp  wrap_parse.cpp  wrap_paths.cpp  wrap_signal.cpp  wrap_stopwatch.cpp  wrap_stringid.cpp  wrap_stringutil.cpp  wrap_timer.cpp  wrap_vec2.cpp  wrap_vec2d.cpp  wrap_vec2darray.cpp  wrap_xml.cpp
libs/vgc/dom/: CMakeLists.txt  NOTES.md  api.h  attribute.cpp  attribute.h  colorattribute.cpp  colorattribute.h  document.cpp  document.h  element.cpp  element.h  exceptions.cpp  exceptions.h  history.cpp  history.h  io.cpp  io.h  logcategories.cpp  logcategories.h  node.cpp  node.h  noneor.h  notaliveexception.cpp  notaliveexception.h  operation.cpp  operation.h  path.cpp  path.h  pathelement.cpp  pathelement.h  positionsattribute.cpp  positionsattribute.h  schema.cpp  schema.h  strings.cpp  strings.h  value.cpp  value.h  vgc.cpp  vgc.h  (+6 more)
libs/vgc/dom/detail/: facecycles.cpp  facecycles.h  pyvalue.cpp  pyvalue.h
libs/vgc/dom/tests/: CMakeLists.txt  test_document.py  test_element.py  test_node.py  test_path.py  test_value.cpp  test_value.py  test_vgc.py  test_xmlformattingstyle.py
libs/vgc/dom/wraps/: CMakeLists.txt  common.h  module.cpp  wrap_document.cpp  wrap_element.cpp  wrap_exceptions.cpp  wrap_node.cpp  wrap_path.cpp  wrap_value.cpp  wrap_vgc.cpp  wrap_xmlformattingstyle.cpp
libs/vgc/geometry/: CMakeLists.txt  api.h  arc.h  bezier.h  bezierspline.h  bezierspline1d.h  bezierspline2d.h  camera2.h  camera2d.cpp  camera2d.h  catmullrom.cpp  catmullrom.h  curve.cpp  curve.h  curvecommand.cpp  curvecommand.h  curves2d.cpp  curves2d.h  epsilon.h  fillstyle.cpp  fillstyle.h  interpolatingstroke.cpp  interpolatingstroke.h  intersect.h  logcategories.cpp  logcategories.h  mat.h  mat2.h  mat2d.cpp  mat2d.h  mat2f.cpp  mat2f.h  mat3.h  mat3d.cpp  mat3d.h  mat3f.cpp  mat3f.h  mat4.h  mat4d.cpp  mat4d.h  (+77 more)
libs/vgc/geometry/detail/: internalkey.h  segmentintersect.h
libs/vgc/geometry/tests/: CMakeLists.txt  segment2data.py  test_arrays.cpp  test_intersect.py  test_mat.py  test_polyline.cpp  test_range.py  test_rect.py  test_segment.py  test_segmentintersector2.cpp  test_segmentintersector2.py  test_traits.cpp  test_triangle.py  test_vec.py
libs/vgc/geometry/tools/: common.py  generate.py  mat2x.cpp  mat2x.h  mat3x.cpp  mat3x.h  mat3x.py  mat4x.cpp  mat4x.h  mat4x.py  range1x.cpp  range1x.h  rect2x.cpp  rect2x.h  segment2x.cpp  segment2x.h  triangle2x.cpp  triangle2x.h  vec2x.cpp  vec2x.h  vec2x.py  vec3x.cpp  vec3x.h  vec4x.cpp  vec4x.h  vgcgeometry.natvis
libs/vgc/geometry/wraps/: CMakeLists.txt  module.cpp  vec.h  wrap_curve.cpp  wrap_intersect.cpp  wrap_mat.cpp  wrap_point.cpp  wrap_range.cpp  wrap_rect.cpp  wrap_segment.cpp  wrap_segmentintersector2.cpp  wrap_vec.cpp  (+2 more)
libs/vgc/graphics/: CMakeLists.txt  api.h  batch.h  blendstate.h  buffer.h  cliprect.h  colorgradient.h  constants.h  engine.cpp  engine.h  enums.h  exceptions.cpp  exceptions.h  font.cpp  font.h  framebuffer.h  geometryview.h  icon.cpp  icon.h  idgenerator.cpp  idgenerator.h  image.cpp  image.h  imageview.h  logcategories.cpp  logcategories.h  program.h  rasterizerstate.h  resource.h  richtext.cpp  richtext.h  samplerstate.h  strings.cpp  strings.h  svg.cpp  svg.h  swapchain.h  text.cpp  text.h
libs/vgc/style/: CMakeLists.txt  api.h  logcategories.cpp  logcategories.h  metrics.h  parse.cpp  parse.h  sheet.cpp  sheet.h  spec.cpp  spec.h  strings.cpp  strings.h  stylableobject.cpp  stylableobject.h  style.cpp  style.h  stylesheet.cpp  stylesheet.h  token.cpp  token.h  types.cpp  types.h  value.cpp  value.h
libs/vgc/ui/: CMakeLists.txt  action.cpp  action.h  actiongroup.cpp  actiongroup.h  api.h  application.cpp  application.h  boolsetting.cpp  boolsetting.h  boolsettingedit.cpp  boolsettingedit.h  button.cpp  button.h  buttongroup.cpp  buttongroup.h  canvas.cpp  canvas.h  canvastool.cpp  canvastool.h  checkbox.cpp  checkbox.h  checkenums.cpp  checkenums.h  colorpalette.cpp  colorpalette.h  column.cpp  column.h  columnlayout.cpp  columnlayout.h  combobox.cpp  combobox.h  command.cpp  command.h  cursor.cpp  cursor.h  cursor_macos.mm  dialog.cpp  dialog.h  dropdownbutton.cpp  (+135 more)
third/: CMakeLists.txt  README.md
third/libtess2/: CMakeLists.txt
third/libtess2/Source/: bucketalloc.c
(+392 files in other folders)
